Convert var declarations and List.of() in McpServer.java to Java 8 compatible alternatives
Co-Authored-By: 于泽棋 <finyu@webank.com>