@@ -562,9 +562,9 @@ public interface McpServer {
 		 * settings.
 		 */
 		public McpAsyncServer build() {
-			var features = new McpServerFeatures.Async(this.serverInfo, this.serverCapabilities, this.tools,
+			McpServerFeatures.Async features = new McpServerFeatures.Async(this.serverInfo, this.serverCapabilities, this.tools,
 					this.resources, this.resourceTemplates, this.prompts, this.rootsChangeHandlers, this.instructions);
-			var mapper = this.objectMapper != null ? this.objectMapper : new ObjectMapper();
+			ObjectMapper mapper = this.objectMapper != null ? this.objectMapper : new ObjectMapper();
 			return new McpAsyncServer(this.transportProvider, mapper, features);
 		}
 
@@ -966,7 +966,7 @@ public interface McpServer {
 		public SyncSpecification rootsChangeHandlers(
 				BiConsumer<McpSyncServerExchange, List<McpSchema.Root>>... handlers) {
 			Assert.notNull(handlers, "Handlers list must not be null");
-			return this.rootsChangeHandlers(List.of(handlers));
+			return this.rootsChangeHandlers(Arrays.asList(handlers));
 		}
 
 		/**
@@ -991,8 +991,8 @@ public interface McpServer {
 					this.tools, this.resources, this.resourceTemplates, this.prompts, this.rootsChangeHandlers,
 					this.instructions);
 			McpServerFeatures.Async asyncFeatures = McpServerFeatures.Async.fromSync(syncFeatures);
-			var mapper = this.objectMapper != null ? this.objectMapper : new ObjectMapper();
-			var asyncServer = new McpAsyncServer(this.transportProvider, mapper, asyncFeatures);
+			ObjectMapper mapper = this.objectMapper != null ? this.objectMapper : new ObjectMapper();
+			McpAsyncServer asyncServer = new McpAsyncServer(this.transportProvider, mapper, asyncFeatures);
 
 			return new McpSyncServer(asyncServer);
 		}
